examples/errors/syntaxerror.ign
<program>
  {print(safsda())}
  <function name=safsdfa>
    {print(2++2)}
  </function>
</program>